--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <li><a href="http://www.kanxav.ga/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayarun.com/index.php" target="_blank">玛雅网</a></li>
-<li><a href="http://c.taoyin365.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
+<li><a href="http://tech.taoyin365.org/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
 <li><a href="http://xocat2.com/f/?fromuid=1006945" target="_blank">Xocat Forum</a></li>
@@ -109,7 +109,7 @@
 <li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://108.171.242.244/" target="_blank">MyHd1080</a></li>
-<li><a href="http://w1.vz05.biz/pw/" target="_blank">1024核工厂</a></li>
+<li><a href="http://t3.9laik.live/pw/" target="_blank">1024核工厂</a></li>
 <li><a href="http://www.51youba.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
@@ -126,6 +126,7 @@
 <li><a href="http://204.152.220.36/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
+<li><a href="http://www.budelu.com/" target="_blank">不得撸</a></li>
 <li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
@@ -141,7 +142,7 @@
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
-<li><a href="http://www.xav66.com/" target="_blank">XIAAV</a></li>
+<li><a href="http://www.xav333.com/" target="_blank">XIAAV</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.yixingjiabbs.com/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
@@ -168,7 +169,7 @@
 <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
-<li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
+<li><a href="http://www.500dh.me/" target="_blank">500导航</a></li>
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
@@ -360,11 +361,12 @@
 <li><a href="http://cn.btmao.bid/" target="_blank">BT猫自拍</a></li>
 <li><a href="http://www.5557t.com/" target="_blank">用力撸</a></li>
 <li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
+<li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
-<li><a href="https://www.92sihu.com/" target="_blank">四虎影库</a></li>
+<li><a href="https://www.47sihu.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://www.95gav.com/" target="_blank">91GAV</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
@@ -376,7 +378,7 @@
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
-<li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
+<li><a href="http://www.700zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
@@ -482,7 +484,7 @@
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
 <li><a href="http://www.ivnext.vip/" target="_blank">少女写真论坛</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
-<li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
+<li><a href="http://www.52yuanwei.mobi/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
 <li><a href="http://www.u15loli.com/?fromuid=13188" target="_blank">U15萝莉小店</a></li>
 <li><a href="http://u15.info/" target="_blank">U-15天堂</a></li>
@@ -566,7 +568,7 @@
 <li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
 <li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
-<li><a href="http://www.852867.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
+<li><a href="http://www.win981.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://www.xy69.info/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
 <li><a href="http://www.xyj2014.com/?fromuid=118049" target="_blank">西友记</a></li>
@@ -621,9 +623,9 @@
 <li><a href="http://bbs.feng.com/" target="_blank">威锋网</a></li>
 <li><a href="http://www.feverlab.com/" target="_blank">發燒網</a></li>
 <li><a href="http://www.hacken.cc/bbs/?fromuid=1592981" target="_blank">電玩動漫</a></li>
-<li><a href="http://www.suppig.net/" target="_blank">猪猪乐园</a></li>
+<li><a href="http://98.126.51.43/" target="_blank">猪猪乐园</a></li>
 <li><a href="http://www.bmdru.com/" target="_blank">顶好精品论坛</a></li>
-<li><a href="http://www.zhenhaohd.com/" target="_blank">真好论坛</a></li>
+<li><a href="http://www.zhenhaolt.com/" target="_blank">真好论坛</a></li>
 <li><a href="http://www.hegouvip.com/" target="_blank">合购VIP</a></li>
 <li><a href="http://bbs.ludake.com/" target="_blank">撸大客</a></li>
 <li><a href="http://bbs.asiatvro.com/?fromuid=482005" target="_blank">卫视烧友论坛</a></li>
@@ -829,7 +831,7 @@
 <li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
 <li><a href="http://btkitty.bid/" target="_blank">BT KITTY</a></li>
 <li><a href="https://www.nyaa.se/" target="_blank">Nyaa</a></li>
-<li><a href="https://btdigg.org/" target="_blank">BTDigg</a></li>
+<li><a href="http://btdigg.pw/" target="_blank">BTDigg</a></li>
 <li><a href="https://tpb.dashitz.com/" target="_blank">TPB</a></li>
 <li><a href="http://torrentcrazy.to/" target="_blank">Torrent Crazy</a></li>
 <li><a href="https://www.torrentkitty.tv/search/" target="_blank">Torrentkitty</a></li>
@@ -854,7 +856,7 @@
 <li><a href="http://www.cilibaba.org/" target="_blank">CiLiBaBa</a></li>
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
 <li><a href="http://torrent.sex169.biz/" target="_blank">SEX169 種子站</a></li>
-<li><a href="http://www.btse69.com/" target="_blank">图图资源</a></li>
+<li><a href="http://www.ttbt3.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
 <li><a href="http://clshe.com/" target="_blank">磁力社</a></li>
@@ -862,7 +864,7 @@
 <li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
 <li><a href="http://www.cilihome.com/" target="_blank">磁力之家</a></li>
 <li><a href="http://www.yunbosou.cc/" target="_blank">云播搜</a></li>
-<li><a href="http://www.btcherry.org/" target="_blank">BT樱桃</a></li>
+<li><a href="http://www.btcherry.info/" target="_blank">BT樱桃</a></li>
 <li><a href="http://www.btkuaisou.cc/" target="_blank">BT快搜</a></li>
 <li><a href="http://bt2.bt87.cc/" target="_blank">BT搜搜</a></li>
 <li><a href="http://bt588.cc/" target="_blank">BT588</a></li>
