--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxtv.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.yslav.com/" target="_blank">夜色撸</a></li>
-<li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
+<li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
