--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.740547610.com/" target="_blank">宅男福利</a></li>
+<li><a href="http://www.yezubuluo.com/?454135" target="_blank">椰族部落</a></li>
 <li><a href="http://serendang.us/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
@@ -233,7 +234,7 @@
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
 <li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
-<li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
+<li><a href="http://www.cjkdl.xyz/" target="_blank">苍井空导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
