--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.beett.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.x6h.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://lady.cf/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
@@ -88,7 +88,7 @@
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://www.kanxav.ga/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
-<li><a href="http://www.mayarun.com/index.php" target="_blank">玛雅网</a></li>
+<li><a href="http://www.mayaun.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://tech.taoyin365.org/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
@@ -138,14 +138,13 @@
 <li><a href="http://c-street.us/bbs/?fromuid=164277" target="_blank">华人街</a></li>
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
-<li><a href="http://www.99rebbs5.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
+<li><a href="http://www.99rebbs6.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
 <li><a href="http://www.youbbbs.co/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
-<li><a href="http://www.xav333.com/" target="_blank">XIAAV</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
-<li><a href="http://www.yixingjiabbs.com/?fromuid=416640" target="_blank">亿性家</a></li>
+<li><a href="http://www.yxj259.com/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
@@ -251,6 +250,7 @@
 <li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
+<li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.hongfanqu.info/" target="_blank">红番区</a></li>
 <li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://www.seqren.info/" target="_blank">色情人视频</a></li>
@@ -261,7 +261,9 @@
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
-<li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
+<li><a href="http://www.jj51.info/" target="_blank">鸡鸡视频</a></li>
+<li><a href="http://dcshipin.com/" target="_blank">灯草视频</a></li>
+<li><a href="http://caol66.com/" target="_blank">草榴视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
@@ -378,6 +380,7 @@
 <li><a href="https://www.189df.com/" target="_blank">东方AV在线</a></li>
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
+<li><a href="http://www.yjizz0.com/" target="_blank">YouJizz</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.700zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
@@ -529,7 +532,8 @@
 <li><a href="http://www.hacg.la/wp/" target="_blank">琉璃神社</a></li>
 <li><a href="http://18h.animezilla.com/" target="_blank">宅宅愛動漫</a></li>
 <li><a href="https://www.acg.tf/" target="_blank">绅士二次元</a></li>
-<li><a href="https://www.htai.me/" target="_blank">绅士图书馆</a></li>
+<li><a href="https://htai.co/" target="_blank">绅士图书馆</a></li>
+<li><a href="https://zerohentai.com/" target="_blank">Hentai0</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
 <li><a href="http://league-of-hentai.com/" target="_blank">League of Hentai</a></li>
 <li><a href="http://www.ahri8.com/" target="_blank">松鼠症倉庫</a></li>
@@ -539,7 +543,6 @@
 <li><a href="http://hentaistream.com/" target="_blank">Hentai Stream</a></li>
 <li><a href="http://www.hentai.xxx/" target="_blank">Hentai xxx</a></li>
 <li><a href="https://www.fakku.net/" target="_blank">FAKKU</a></li>
-<li><a href="http://206.190.134.44/" target="_blank">Hmovie-moe</a></li>
 <li><a href="http://www.toonaddict.com/" target="_blank">Toon Addict</a></li>
 <li><a href="http://www.mangago.me/" target="_blank">Mangago</a></li>
 <li><a href="http://milftoon.xxcomics.net/" target="_blank">Milftoon</a></li>
@@ -765,6 +768,7 @@
 <li><a href="http://www.pornpicc.com/" target="_blank">妹子图控</a></li>
 <li><a href="http://www.baituce.com/" target="_blank">百图册</a></li>
 <li><a href="http://www.sousi8.cc/" target="_blank">搜丝吧</a></li>
+<li><a href="http://www.18av.com/" target="_blank">18av性感美女</a></li>
 <li><a href="http://www.guomo.link/?fromuid=130143" target="_blank">国模</a></li>
 <li><a href="http://www.17345.com/" target="_blank">三次元</a></li>
 <li><a href="http://asiangirlcunt.com/" target="_blank">asiangirlcunt</a></li>
