--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.x6h.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.gtta.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://lady.cf/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
@@ -284,7 +284,6 @@
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
-<li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -332,6 +331,7 @@
 <li><a href="http://www.caopengwang.top/" target="_blank">超碰AV网</a></li>
 <li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://jiujiuredizhi.xyz/" target="_blank">团团热视频</a></li>
+<li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
 <li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
 <li><a href="http://jiujiureshipin.xyz/" target="_blank">久久热在线</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
