--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
 <li><a href="http://cao78.xyz/" target="_blank">操jb视频</a></li>
+<li><a href="http://www.666jjy.com/" target="_blank">涩情小电影</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
 <li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
@@ -333,7 +334,7 @@
 <li><a href="http://jiujiuredizhi.xyz/" target="_blank">团团热视频</a></li>
 <li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
 <li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
-<li><a href="http://jiujiureshipin.xyz/" target="_blank">久久热在线</a></li>
+<li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
 <li><a href="http://lulunai.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
@@ -346,7 +347,7 @@
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
-<li><a href="http://www.avtb66.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb123.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
