--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <li><a href="http://204.152.220.36/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
-<li><a href="http://www.budelu.com/" target="_blank">不得撸</a></li>
+<li><a href="http://v3.budelu.org/" target="_blank">不得撸</a></li>
 <li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
