--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
+<li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
@@ -179,13 +180,13 @@
 <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
 <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
-<li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
 <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
 <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
+<li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
@@ -193,7 +194,6 @@
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
 <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
-<li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
 <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
 <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://www.pigutu.pw/" target="_blank">第一福利导航</a></li>
@@ -201,30 +201,27 @@
 <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
 <li><a href="http://www.meiniang.pw/" target="_blank">媚娘福利导航</a></li>
 <li><a href="http://www.1024fuli.pw/" target="_blank">1024福利导航</a></li>
-<li><a href="http://www.baihudh.info/" target="_blank">白虎福利导航</a></li>
 <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
 <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
 <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
 <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
-<li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
-<li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
+<li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
 <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
-<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 <li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
-<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
-<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
-<li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
-<li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
-<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
-<li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
-<li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
 <li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
 <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
 <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
 <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
+<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
+<li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
+<li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
+<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
+<li><a href="http://luxiao2.cc/" target="_blank">撸小二導航</a></li>
+<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
+<li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
 <li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
 <li><a href="http://www.ds555.cc/" target="_blank">男人福利導航</a></li>
@@ -232,6 +229,7 @@
 <li><a href="http://www.muguadaohang.com/" target="_blank">木瓜导航</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
+<li><a href="http://www.shenma068.cn/" target="_blank">色妹子导航</a></li>
 <li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
 <li><a href="http://www.cjkdl.xyz/" target="_blank">苍井空导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
@@ -572,6 +570,7 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
 <li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
+<li><a href="http://www.xgmeinv.com/" target="_blank">西瓜美女影视</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.win981.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://www.xy69.info/?fromuid=678142" target="_blank">逍遥游</a></li>
@@ -754,6 +753,7 @@
 <li><a href="http://www.meinvtu.info/" target="_blank">美女图福利</a></li>
 <li><a href="http://www.ixieegif.com/" target="_blank">G爱F出处网</a></li>
 <li><a href="http://www.jiepai77.com/" target="_blank">街拍77网</a></li>
+<li><a href="https://www.jptun.com/" target="_blank">街拍广场</a></li>
 <li><a href="http://91.t9m.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
