--- a/index.html
+++ b/index.html
@@ -260,8 +260,7 @@
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
 <li><a href="http://www.jj51.info/" target="_blank">鸡鸡视频</a></li>
-<li><a href="http://dcshipin.com/" target="_blank">灯草视频</a></li>
-<li><a href="http://caol66.com/" target="_blank">草榴视频</a></li>
+<li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
@@ -313,6 +312,7 @@
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
+<li><a href="http://www.yyluav.com/" target="_blank">夜夜撸AV</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
@@ -324,6 +324,8 @@
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
+<li><a href="http://dcshipin.com/" target="_blank">灯草视频</a></li>
+<li><a href="http://caol66.com/" target="_blank">草榴视频</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
@@ -394,7 +396,7 @@
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
-<li><a href="http://www.12jiuseteng.com/" target="_blank">九涩腾</a></li>
+<li><a href="http://www.13jiuseteng.com/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.meimei7.com/" target="_blank">在线手机视频</a></li>
 <li><a href="https://avhd101.com/" target="_blank">AVHD101</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
