--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
-<li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
+<li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
 <li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
@@ -196,6 +196,7 @@
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
 <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
+<li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.pigutu.pw/" target="_blank">第一福利导航</a></li>
 <li><a href="http://www.chaxuedh.pw/" target="_blank">插穴福利导航</a></li>
 <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
@@ -206,7 +207,6 @@
 <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
 <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
 <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
-<li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
 <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 <li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
@@ -271,7 +271,6 @@
 <li><a href="http://www.taoludy.com/" target="_blank">淘撸在线AV</a></li>
 <li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
-<li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
 <li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
@@ -286,6 +285,7 @@
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
+<li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
 <li><a href="http://cao78.xyz/" target="_blank">操jb视频</a></li>
@@ -300,7 +300,6 @@
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
-<li><a href="http://www.8858av.com/" target="_blank">小电影</a></li>
 <li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
 <li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
@@ -353,14 +352,14 @@
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
-<li><a href="http://www.5xww2.com/" target="_blank">5X社区</a></li>
-<li><a href="http://www.koko5454.win/" target="_blank">东京热</a></li>
+<li><a href="http://www.5xxx1.com/" target="_blank">5X社区</a></li>
+<li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
 <li><a href="http://www.99ff1.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl1024.com/" target="_blank">任性撸</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
-<li><a href="http://www.liuliucao.tv/" target="_blank">榴榴草</a></li>
+<li><a href="http://www.8858av.com/" target="_blank">天天撸</a></li>
 <li><a href="http://www.u1k.win/" target="_blank">优衣库</a></li>
 <li><a href="http://cn.btmao.bid/" target="_blank">BT猫自拍</a></li>
 <li><a href="http://www.5557t.com/" target="_blank">用力撸</a></li>
@@ -562,7 +561,7 @@
 <li><a href="http://ywzd1.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.fou3.com/" target="_blank">爬花楼</a></li>
-<li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
+<li><a href="http://www.cvk3.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://204.152.220.30/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.weipaipapa.com/" target="_blank">微拍啪啪</a></li>
@@ -683,15 +682,17 @@
 		<strong><a name="/12/">欧美情报</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="https://www.avmemo.com/" target="_blank">AVMEMO</a></li>
+<li><a href="http://namethatporn.com/" target="_blank">NameThatPorn</a></li>
+<li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
+<li><a href="https://theporndude.com/" target="_blank">The Porn Dude</a></li>
+<li><a href="http://www.hegre.com/" target="_blank">Hegre</a></li>
 <li><a href="http://www.joymii.com/" target="_blank">joymii</a></li>
 <li><a href="http://www.realitykings.com/" target="_blank">Reality Kings</a></li>
 <li><a href="http://www.mofosnetwork.com/" target="_blank">Mofos</a></li>
 <li><a href="http://www.twistys.com/" target="_blank">Twistys</a></li>
-<li><a href="http://wetseeds.com/" target="_blank">WetSeeds</a></li>
-<li><a href="http://www.bangbrosnetwork.com/" target="_blank">Bang Bros</a></li>
 <li><a href="http://www.elegantangel.com/" target="_blank">elegantangel</a></li>
 <li><a href="http://www.blackgfs.com/" target="_blank">Black Gfs</a></li>
-<li><a href="http://wtf-pass.net/" target="_blank">Wtf Pass</a></li>
 <li><a href="http://hotlegsandfeet.com/" target="_blank">HotLegsandFeet</a></li>
 <li><a href="http://1by-day.com/" target="_blank">1By-Day</a></li>
 <li><a href="http://onlyblowjob.com/" target="_blank">onlyblowjob</a></li>
@@ -702,7 +703,6 @@
 <li><a href="http://www.julesjordanvideo.com/" target="_blank">julesjordan</a></li>
 <li><a href="http://www.digitalplayground.com/" target="_blank">digitalplayground</a></li>
 <li><a href="http://www.iafd.com/" target="_blank">iafd</a></li>
-<li><a href="https://www.avmemo.com/" target="_blank">AVMEMO</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -781,7 +781,7 @@
 <li><a href="http://thefappening.so/" target="_blank">TheFappening</a></li>
 <li><a href="http://www.metarthunter.com/" target="_blank">MetArt Hunter</a></li>
 <li><a href="http://www.erotica7.com/" target="_blank">Erotica 7</a></li>
-<li><a href="http://girl-atlas.com/" target="_blank">Girl Atlas</a></li>
+<li><a href="http://madamevoyeur.com/" target="_blank">Madame Voyeur</a></li>
 <li><a href="http://www.nudevideoswallpapers.com/" target="_blank">裸女壁纸</a></li>
 <li><a href="http://ftop.ru/" target="_blank">ftop壁纸</a></li>
 <li><a href="http://imagezog.com/" target="_blank">ImageZog</a></li>
@@ -837,6 +837,7 @@
 		<ul>
 <li><a href="https://btso.pw/search" target="_blank">BTSOW种子</a></li>
 <li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
+<li><a href="http://sexvid.cc/" target="_blank">AV种子</a></li>
 <li><a href="http://btkitty.bid/" target="_blank">BT KITTY</a></li>
 <li><a href="https://www.nyaa.se/" target="_blank">Nyaa</a></li>
 <li><a href="http://btdigg.pw/" target="_blank">BTDigg</a></li>
