--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
 <li><a href="http://www.ds555.cc/" target="_blank">男人福利導航</a></li>
 <li><a href="http://www.yidianpai.com/" target="_blank">一点拍导航</a></li>
-<li><a href="http://www.muguadaohang.com/" target="_blank">木瓜导航</a></li>
+<li><a href="http://www.dagongji.me/" target="_blank">大公鸡导航网</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
 <li><a href="http://www.shenma068.cn/" target="_blank">色妹子导航</a></li>
@@ -336,11 +336,11 @@
 <li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
 <li><a href="http://lulunai.com/" target="_blank">撸撸奶</a></li>
+<li><a href="http://www.mowang.info/" target="_blank">魔王在线</a></li>
 <li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.lu667.com/" target="_blank">撸一撸</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
-<li><a href="http://www.afaf11.com/" target="_blank">猫色网</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸AV在线</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
@@ -364,6 +364,7 @@
 <li><a href="http://cn.btmao.bid/" target="_blank">BT猫自拍</a></li>
 <li><a href="http://www.5557t.com/" target="_blank">用力撸</a></li>
 <li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
+<li><a href="http://www.8858av.com/" target="_blank">撸撸网</a></li>
 <li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
@@ -379,6 +380,7 @@
 <li><a href="http://www.tuxse.com/" target="_blank">超碰在线</a></li>
 <li><a href="https://www.189df.com/" target="_blank">东方AV在线</a></li>
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
+<li><a href="http://6666fuli.com/" target="_blank">6666视频</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://www.yjizz0.com/" target="_blank">YouJizz</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
@@ -487,6 +489,7 @@
 <li><a href="http://www.bomeifl.com/" target="_blank">大波妹</a></li>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
 <li><a href="http://www.ivnext.vip/" target="_blank">少女写真论坛</a></li>
+<li><a href="http://23.231.192.70/?fromuid=34160" target="_blank">wc俱乐部</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.mobi/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
@@ -836,7 +839,6 @@
 		<div class="linkl">
 		<ul>
 <li><a href="https://btso.pw/search" target="_blank">BTSOW种子</a></li>
-<li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
 <li><a href="http://sexvid.cc/" target="_blank">AV种子</a></li>
 <li><a href="http://btkitty.bid/" target="_blank">BT KITTY</a></li>
 <li><a href="https://www.nyaa.se/" target="_blank">Nyaa</a></li>
@@ -864,6 +866,7 @@
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
 <li><a href="http://www.cilibaba.org/" target="_blank">CiLiBaBa</a></li>
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
+<li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
 <li><a href="http://torrent.sex169.biz/" target="_blank">SEX169 種子站</a></li>
 <li><a href="http://www.ttbt3.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
