--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-<li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
+<li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
+<li><a href="http://www.fulidh.cf/" target="_blank">蓝色福利导航</a></li> 
 <li><a href="http://www.500dh.me/" target="_blank">500导航</a></li>
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
